--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "gatsby-starter-directive",
+  "name": "gccsite",
   "version": "0.0.1",
-  "description": "Gatsby.js V2 starter template based on Directive by HTML5 UP",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/anubhavsrivastava/gatsby-starter-directive.git"
-  },
+  "description": "GCC Webiste",
   "author": {
-    "name": "Anubhav Srivastava",
-    "email": "anubhav.srivastava00@gmail.com"
+    "name": "Nathan Laha",
+    "email": "nlaha@outlook.com"
   },
   "dependencies": {
-    "gatsby": "^2.20.2",
+    "eol": "^0.9.1",
+    "gatsby": "^2.24.53",
     "gatsby-plugin-manifest": "^2.3.1",
     "gatsby-plugin-offline": "^3.1.0",
     "gatsby-plugin-react-helmet": "^3.2.0",
@@ -22,7 +19,9 @@
     "react-helmet": "^5.2.1",
     "react-images": "^1.1.0",
     "react-scrollspy": "^3.4.2",
-    "smoothscroll-polyfill": "^0.4.4"
+    "simplex-noise": "^2.4.0",
+    "smoothscroll-polyfill": "^0.4.4",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "develop": "gatsby develop",
@@ -43,9 +42,5 @@
     "gatsby-starter",
     "gatsby-starter-directive"
   ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/anubhavsrivastava/gatsby-starter-directive/issues"
-  },
-  "homepage": "https://github.com/anubhavsrivastava/gatsby-starter-directive#readme"
+  "license": "MIT"
 }
